# pval-regularized-trees

./: .gitignore  A stopping rule for regression trees.tex  A stopping rule for tree regression.tex  Makefile  README.md  cart.ipynb  digest.txt  experiment_report.json  main.tex  notes.tex  old_notes.tex  pyproject.toml  rpart_style_tree  test.tex
.vimtex/: A stopping rule for regression trees.aux  A stopping rule for regression trees.fdb_latexmk  A stopping rule for regression trees.fls  main.aux  main.fdb_latexmk  main.fls  mynotes.aux  mynotes.bbl  mynotes.bcf  mynotes.blg  mynotes.fdb_latexmk  mynotes.fls  mynotes.out  mynotes.run.xml  notes.aux  notes.bbl  notes.blg  notes.fdb_latexmk  notes.fls  old_notes.aux  old_notes.fdb_latexmk  old_notes.fls
_src/: boosting.py  data.py  models.py  recursive_early_stopping.py  single_tree.py  testing.py  tree_plotting.py  utils.py
code/: __init__.py  cart.ipynb  chi_sq_dist.py  chi_sq_distr_func.py  simstudy.py  simulation.ipynb  tree.py
examples/: boosting_neufeldt_data.py  boosting_utils.py  gbm_vs_pboosting.py  model_performance_old.py  recursive_stopping_rule.py  rmse_gbm_histogram.py  rmse_histogram.py  rmse_histogram_genai.py  tree_randomness.py
experiments/: exp_4_1_pvalue_approximation.py  exp_4_2_1_cappelli_comparison.py  exp_4_2_2_cv_randomness.py  exp_4_2_neufeldt_pruning.py  exp_4_3_real_data.py
models/: ccp_ptree.py  ccp_ptree_boosting.py  gbm.py  recursive_ptree.py  recursive_ptree_boosting.py
notebooks/: cart.ipynb  simulation.ipynb  test.ipynb
results/: rmse_histogram.json  rmse_histogram_rmse_similar.json
simstudy/: california_housing.py  california_housing_MSEP.py  changepoint_stopping.py  overfitting.py  pyvenv.cfg  (+4 more)
(+86 files in other folders)
