[project]
name = "covariance-penalties"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyterlab>=4.3.3",
    "dtreeviz>=2.2.2",
    "graphviz>=0.20.3",
]

[dependency-groups]
dev = [
    "gitingest>=0.3.1",
    "ruff>=0.8.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
